Closed Bug 820103 Opened 13 years ago Closed 13 years ago

bluetooth Hfp memory dialing and Hfp supplied number not supported

Categories

(Firefox OS Graveyard :: General, defect, P1)

ARM
Gonk (Firefox OS)
defect

Tracking

(blocking-basecamp:+, firefox19 fixed, firefox20 fixed, b2g18 fixed)

RESOLVED FIXED
B2G C3 (12dec-1jan)
blocking-basecamp +
Tracking Status
firefox19 --- fixed
firefox20 --- fixed
b2g18 --- fixed

People

(Reporter: ggrisco, Assigned: gyeh)

References

Details

Attachments

(1 file, 2 obsolete files)

1. Switch ON BT from Settings>Bluetooth. 2. Pair to a Headset 3. Try memory Dialing from HF Feature seems to not be supported. Wanted to see if this was intentional or not.
I checked BluetoothHfpManager::ReceiveSocketData but didn't see any handling of "ATD".
Assignee: nobody → gyeh
Attachment #690755 - Flags: review?(echou)
(In reply to ggrisco from comment #0) > 1. Switch ON BT from Settings>Bluetooth. > 2. Pair to a Headset > 3. Try memory Dialing from HF > > Feature seems to not be supported. Wanted to see if this was intentional or > not. No, not intentional, just missed it. Please note: * Dialer app won't support memory dialing by v1, so we'll respond with ERROR. (HFP spec 4.19 "Memory Dialing from the HF") * In addition, we need support from Etienne, the owner of Dialer app, to modify Dialer so that an outgoing call can be established with the phone number supplied by HF after receiving system message sent from Bluetooth. Gina will file another bug for this. This should be bb+. Please let us know if you have any questions. Eric
Flags: needinfo?(echou)
Comment on attachment 690755 [details] [diff] [review] Patch 1(v1): bluetooth Hfp memory dialing and Hfp supplied number not supported Review of attachment 690755 [details] [diff] [review]: ----------------------------------------------------------------- ok, looks good, but this patch has modified the interface of system message between Bluetooth and Dialer, so please file another bug for Etienne and mark dependency properly.
Attachment #690755 - Flags: review?(echou) → review+
Blocks: 820655
The product team is looking into this and will follow-up with Eric shortly.
Flags: needinfo?(clee)
blocking-basecamp: ? → +
Synced with product team. We'll fix this based on the principal mentioned in comment 3. The patch should work with Bug 820655 fixed.
Priority: -- → P1
Target Milestone: --- → B2G C3 (12dec-1jan)
Some examples of ATD command with a specific number are "ATD+886212345678;\r", "ATD8158975;". Note that we only keep string "ATD" and the phone number in the system message of bluetooth-dialer-command.
Attachment #690755 - Attachment is obsolete: true
Attachment #692804 - Flags: review?(echou)
Comment on attachment 692804 [details] [diff] [review] Patch 1(v2): bluetooth Hfp memory dialing and Hfp supplied number not supported Review of attachment 692804 [details] [diff] [review]: ----------------------------------------------------------------- r+ with nits addressed. ::: dom/bluetooth/BluetoothHfpManager.cpp @@ +570,5 @@ > + } else if (!strncmp(msg, "ATD>", 4)) { > + // Currently, we don't support memory dialing in Dialer app > + SendLine("ERROR"); > + } else if (!strncmp(msg, "ATD", 3)) { > + nsCString message(msg), newMsg; Nit: since message & newMsg are used locally, let's declare them as nsAutoCString instead of nsCString. @@ +571,5 @@ > + // Currently, we don't support memory dialing in Dialer app > + SendLine("ERROR"); > + } else if (!strncmp(msg, "ATD", 3)) { > + nsCString message(msg), newMsg; > + int end = message.FindChar(';', 0); Nit: using FindChar(';') should work, no need to pass the 2nd argument in if it's 0. @@ +572,5 @@ > + SendLine("ERROR"); > + } else if (!strncmp(msg, "ATD", 3)) { > + nsCString message(msg), newMsg; > + int end = message.FindChar(';', 0); > + newMsg += nsDependentCSubstring(message, 0, end); Needs error handling here if end == -1
Attachment #692804 - Flags: review?(echou) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Blocks: 823416
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: