Bug 820103 - Patch 1(v1): bluetooth Hfp memory dialing and Hfp supplied number not supported